--- a/DoaBrinquedos/Base.lproj/Main.storyboard
+++ b/DoaBrinquedos/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Bem Vindo-->
+        <!--Doar Brinquedos-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="DoaBrinquedos" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,8 +19,8 @@
                             <stackView opaque="NO" contentMode="bottom" axis="vertical" distribution="fillEqually" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="1Ug-6w-fBm">
                                 <rect key="frame" x="40" y="150" width="334" height="224.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Doar Brinquedos" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zBK-Jw-JQO">
-                                        <rect key="frame" x="52" y="0.0" width="230.5" height="38.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zBK-Jw-JQO">
+                                        <rect key="frame" x="129" y="0.0" width="76.5" height="38.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -82,7 +82,7 @@
                             <constraint firstItem="1Ug-6w-fBm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="w9B-uY-fE8"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Bem Vindo" largeTitleDisplayMode="always" id="E97-p2-BR5"/>
+                    <navigationItem key="navigationItem" title="Doar Brinquedos" largeTitleDisplayMode="always" id="E97-p2-BR5"/>
                     <connections>
                         <outlet property="textFieldEmail" destination="9Yg-WY-SSo" id="bz0-Y3-0tg"/>
                         <outlet property="textFieldName" destination="jza-tJ-LWe" id="eF4-fh-ZQL"/>
@@ -101,23 +101,75 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ney-US-oxH">
-                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ney-US-oxH">
+                                <rect key="frame" x="0.0" y="52" width="414" height="44"/>
                                 <items>
                                     <navigationItem title="Lista de Brinquedos" largeTitleDisplayMode="always" id="y1R-x2-MUK">
                                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="9Q9-rg-qoK"/>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bem vindo," lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G7y-QS-9Mb">
+                                <rect key="frame" x="8" y="100" width="398" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="miB-RQ-7Ny">
+                                <rect key="frame" x="8" y="138" width="398" height="716"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="sMG-77-7QW" detailTextLabel="qES-Ta-GfV" style="IBUITableViewCellStyleValue1" id="WsE-5g-Uyl">
+                                        <rect key="frame" x="0.0" y="44.5" width="398" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WsE-5g-Uyl" id="sbo-I9-pCe">
+                                            <rect key="frame" x="0.0" y="0.0" width="398" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="sMG-77-7QW">
+                                                    <rect key="frame" x="20" y="15" width="25" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qES-Ta-GfV">
+                                                    <rect key="frame" x="345" y="15" width="33" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="euZ-C2-oVx"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Ney-US-oxH" firstAttribute="trailing" secondItem="euZ-C2-oVx" secondAttribute="trailing" id="30t-Ny-KnX"/>
+                            <constraint firstItem="Ney-US-oxH" firstAttribute="leading" secondItem="euZ-C2-oVx" secondAttribute="leading" id="Nxt-Us-6Ex"/>
+                            <constraint firstItem="G7y-QS-9Mb" firstAttribute="leading" secondItem="euZ-C2-oVx" secondAttribute="leading" constant="8" id="dTo-o2-z2y"/>
+                            <constraint firstItem="euZ-C2-oVx" firstAttribute="bottom" secondItem="miB-RQ-7Ny" secondAttribute="bottom" constant="8" id="e3Q-ZN-zjU"/>
+                            <constraint firstItem="euZ-C2-oVx" firstAttribute="trailing" secondItem="miB-RQ-7Ny" secondAttribute="trailing" constant="8" id="ft3-Wr-rhw"/>
+                            <constraint firstItem="G7y-QS-9Mb" firstAttribute="top" secondItem="Ney-US-oxH" secondAttribute="bottom" constant="4" id="iEL-bA-xZi"/>
+                            <constraint firstItem="Ney-US-oxH" firstAttribute="top" secondItem="euZ-C2-oVx" secondAttribute="top" constant="8" id="j1r-3V-Vhh"/>
+                            <constraint firstItem="miB-RQ-7Ny" firstAttribute="leading" secondItem="euZ-C2-oVx" secondAttribute="leading" constant="8" id="n9x-97-Hzs"/>
+                            <constraint firstAttribute="trailing" secondItem="G7y-QS-9Mb" secondAttribute="trailing" constant="8" id="u2O-AN-DyJ"/>
+                            <constraint firstItem="miB-RQ-7Ny" firstAttribute="top" secondItem="G7y-QS-9Mb" secondAttribute="bottom" constant="8" id="vhY-Gc-Y5Q"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="buttonAdd" destination="9Q9-rg-qoK" id="yeV-ge-6MM"/>
+                        <outlet property="labelUserName" destination="G7y-QS-9Mb" id="cCp-Hz-oVQ"/>
+                        <outlet property="tableViewBrinquedos" destination="miB-RQ-7Ny" id="ZKr-gk-ehi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qWP-ky-hW2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1817" y="81"/>
+            <point key="canvasLocation" x="1815.9420289855075" y="80.357142857142847"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ES9-Vi-7kD">
