--- a/DoaBrinquedos/Base.lproj/Main.storyboard
+++ b/DoaBrinquedos/Base.lproj/Main.storyboard
@@ -197,11 +197,14 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Estado: 0-Novo, 1-Usado, 2-Precisa de Reparo" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4pc-5z-UFD">
-                                        <rect key="frame" x="0.0" y="64" width="334" height="34"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                    </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="9CT-yl-nD3">
+                                        <rect key="frame" x="0.0" y="64" width="334" height="35"/>
+                                        <segments>
+                                            <segment title="Novo"/>
+                                            <segment title="Usado"/>
+                                            <segment title="Precisa de Reparos"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nome do Doador:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Zvx-vw-iaI">
                                         <rect key="frame" x="0.0" y="128" width="334" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -241,11 +244,11 @@
                     </view>
                     <navigationItem key="navigationItem" title="Cadastrar Brinquedo" id="H4w-jv-FMe"/>
                     <connections>
+                        <outlet property="segmentedControlState" destination="9CT-yl-nD3" id="z8w-Ub-gAu"/>
                         <outlet property="textFieldAddress" destination="Fpr-Vg-FTI" id="V4j-gy-T4A"/>
                         <outlet property="textFieldDonor" destination="Zvx-vw-iaI" id="KzB-EU-meh"/>
                         <outlet property="textFieldName" destination="Wrh-PV-G7M" id="KRY-b8-W6O"/>
                         <outlet property="textFieldPhone" destination="aGO-kG-Z1y" id="cwU-BR-274"/>
-                        <outlet property="textFieldState" destination="4pc-5z-UFD" id="Gaa-XM-VPm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fKd-af-pqY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
